<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_100"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivBurger"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/burger" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/question"
        android:textAlignment="center"
        android:textColor="#3E2723"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBurger" />

    <RadioGroup
        android:id="@+id/rgMeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion">

        <RadioButton
            android:id="@+id/rbBeef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/brown_900"
            android:checked="true"
            android:text="@string/beef"
            android:textColor="#3E2723"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rbChicken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/brown_900"
            android:text="@string/chicken"
            android:textColor="#3E2723"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rbPork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/brown_900"
            android:text="@string/pork"
            android:textColor="#3E2723"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/cbCheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:buttonTint="@color/brown_900"
        android:text="@string/cheese"
        android:textColor="#3E2723"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgMeat"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/cbOnions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:buttonTint="@color/brown_900"
        android:text="@string/onions"
        android:textColor="#3E2723"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbCheese"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/cbSalad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:buttonTint="@color/brown_900"
        android:text="@string/salad"
        android:textColor="#3E2723"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbOnions"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/red_200"
        android:text="@string/order"
        android:textColor="#3E2723"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbSalad" />

    <TextView
        android:id="@+id/tvOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:textColor="#3E2723"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOrder"
        tools:text="You ordered a burger with: chicken, cheese, salad" />

</androidx.constraintlayout.widget.ConstraintLayout>